# ESP32_Wifi_AWS

./: .gitignore  README.md
udemy_esp32/: .cproject  sdkconfig  sdkconfig.old
udemy_esp32/esp-aws-iot/aws-iot-device-sdk-embedded-C/tests/unit/include/: aws_iot_config.h
udemy_esp32/esp-aws-iot/libraries/Fleet-Provisioning-for-AWS-IoT-embedded-sdk/Fleet-Provisioning-for-AWS-IoT-embedded-sdk/test/cbmc/proofs/FleetProvisioning_GetRegisterThingTopic/: Makefile
udemy_esp32/main/: CMakeLists.txt  DHT22.c  DHT22.h  app_nvs.c  app_nvs.h  aws_iot.c  http_server.c  http_server.h  main.c  sntp_time_sync.c  wifi_reset_button.c  wifi_reset_button.h
udemy_esp32/main/awsCustom/: CMakeLists.txt  aws_iot.c
udemy_esp32/main/certs/: certificate_pem_crt  private_pem_key
udemy_esp32/main/dht22Custom/: CMakeLists.txt  DHT22.c  DHT22.h
udemy_esp32/main/httpServerCustom/: CMakeLists.txt  http_server.c
udemy_esp32/main/nvsCustom/: CMakeLists.txt  app_nvs.c
udemy_esp32/main/rgbLedCustom/: CMakeLists.txt  rgb_led.c  rgb_led.h
udemy_esp32/main/sntpTimeSyncCustom/: CMakeLists.txt  sntp_time_sync.c  sntp_time_sync.h
udemy_esp32/main/webpage/: app.css
udemy_esp32/main/wifiCustom/: CMakeLists.txt  wifi_app.c  wifi_app.h
